0.07

- Cached has_one and has_many attributes now have a private clearer.

- Various internals changes so that the meta classes now have more
  attributes, rather than creating lots of class attributes in the
  classes which use Fey::ORM::{Table,Schema}.


0.06   2008-05-25

- Factored part of Fey::ORM::Table->_get_column_values into a separate
  method, _set_column_values_from_hashref, since this piece is
  something that subclasses may want to reuse.

- Added a horrible hack to make Postgres BYTEA columns work. Needs
  some serious refactoring. This may well disappear in a future
  version.

- Fixed to work with the most recent versions of Moose, which are now
  prereqs.


0.05   2008-04-18   

- Fey::Object::Table called a method on Fey::Meta::Class::Table
  without loading it, which could cause problems in some cases.

- Moved exceptions to Fey::ORM::Exceptions so you can use them in your
  classes, notably the NoSuchRow exception.

- Made Fey::Object::Table and Fey::Object::Schema extend
  MooseX::Object::StrictConstructor rather than Moose::Object.


0.04   2008-03-06

- Add a private writers for accessors created via has_one() and
  has_many() - this still needs docs.

- Make sure that the schema class's RunInTransaction() method returns
  values of the sub it runs, respecting the caller's context.

- has_one() can now accept a "handles" parameter which work just as
  it does for any Moose attribute.

- has_one() also accepts a new "undef" parameter to allow you to
  explicitly say that the attribute can have an undef as its value.


0.03    2008-02-24

- Fix tests so that they skip without blowing up when DBD::SQLite is
  not installed.

- Fey::Object::Table would always issue a SELECT immediately after an
  INSERT. Now this will be delayed until it is needed. In some cases
  it will never be needed.


0.02    2008-02-21

- Renamed Fey::Object to Fey::Object::Table and added Fey::Object::Schema.

- Also created a Fey::Object::Schema->RunInTransaction() 
